Refactored header layout and styles for improved alignment, responsiveness, and flexibility.

--- a/style/specification.style.css
+++ b/style/specification.style.css
@@ -1,4 +1,9 @@
 /* Header */
+
+#header {
+    min-height: 100vh;
+}
+
 .logo {
     color: white;
     font-family: 'WHEERG';
@@ -43,10 +48,7 @@ input::placeholder {
 
 .header-content {
     flex: 1;
-}
-
-.authen-home {
-    width: max-content;
+    height: max-content;
 }
 
 @media screen and (max-width: 576px) {
